[gd_scene load_steps=46 format=1]

[ext_resource path="res://objs/monster/mon.gd" type="Script" id=1]
[ext_resource path="res://assets/images/rastro_azul.png" type="Texture" id=2]
[ext_resource path="res://objs/vfx/trail.gd" type="Script" id=3]
[ext_resource path="res://assets/images/m_01_azul.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ink_particle_small.png" type="Texture" id=5]
[ext_resource path="res://objs/vfx/ink_particles.gd" type="Script" id=6]
[ext_resource path="res://objs/powerups/powerup_effects.gd" type="Script" id=7]
[ext_resource path="res://objs/powerups/freeze.gd" type="Script" id=8]
[ext_resource path="res://assets/images/freeze_effect_temp.png" type="Texture" id=9]
[ext_resource path="res://objs/powerups/rockets.gd" type="Script" id=10]
[ext_resource path="res://assets/images/sprite_jetpack_foguetes.png" type="Texture" id=11]
[ext_resource path="res://assets/images/sprite_jetpack_braco.png" type="Texture" id=12]
[ext_resource path="res://objs/powerups/pepper.gd" type="Script" id=13]
[ext_resource path="res://assets/images/flame_smash.png" type="Texture" id=14]
[ext_resource path="res://objs/powerups/ghost.gd" type="Script" id=15]
[ext_resource path="res://objs/powerups/medusa.gd" type="Script" id=16]
[ext_resource path="res://assets/images/sprite_medusa.png" type="Texture" id=17]
[ext_resource path="res://objs/powerups/bombermon.gd" type="Script" id=18]
[ext_resource path="res://objs/powerups/horns.gd" type="Script" id=19]
[ext_resource path="res://assets/images/horns_temp.png" type="Texture" id=20]
[ext_resource path="res://objs/powerups/spikespowerup.gd" type="Script" id=21]
[ext_resource path="res://objs/powerups/net.gd" type="Script" id=22]
[ext_resource path="res://assets/images/net_temp_icon.png" type="Texture" id=23]














[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 14.8666

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 0.20851, 1, 1, 1, 0 )

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ink:config/emitting")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]

length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]

length = 0.21
loop = false
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.07, 0.14 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=6]

length = 0.21
loop = false
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.07, 0.14 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trail:config/emitting")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]

length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]

resource/name = "Bombermon"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=9]

resource/name = "BombermonAcquire"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=10]

resource/name = "Freeze"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Freeze/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Horns/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Medusa/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Medusa/Sprite:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]

resource/name = "Net"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Net/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]

resource/name = "NetFinish"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Net/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]

length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pepper/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pepper/Sprite:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=16]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rockets/LeftParticles:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rockets/RightParticles:config/emitting")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rockets/BackSprite:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 0 ]
}

[sub_resource type="Animation" id=17]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rockets/BackSprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rockets/FrontSprite:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rockets/BackSprite:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Freeze/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=19]

custom_solver_bias = 0.0
radius = 86.5171

[sub_resource type="ColorRamp" id=20]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 0.889373, 1, 1, 1, 0 )

[sub_resource type="ConvexPolygonShape2D" id=21]

custom_solver_bias = 0.0
points = Vector2Array( -7.2802, 0.738338, -7.2802, -7.41796, 0.0907364, -3.34476 )

[sub_resource type="ConvexPolygonShape2D" id=22]

custom_solver_bias = 0.0
points = Vector2Array( -6.85091, -1.84228, 1.52002, -6.13012, 1.30538, 2.23587 )

[node name="Mon" type="KinematicBody2D" groups=[
"players",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4.36937 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Trail" type="Particles2D" parent="."]

config/amount = 30
config/lifetime = 0.18
config/emitting = false
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 2 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )
script/script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

z/z = 1
texture = ExtResource( 4 )
hframes = 13
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Die = SubResource( 3 )
anims/Down = SubResource( 4 )
anims/Ground = SubResource( 5 )
anims/Smash = SubResource( 6 )
anims/Up = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 4.36937 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Ink" type="Particles2D" parent="."]

config/amount = 35
config/lifetime = 2.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/texture = ExtResource( 5 )
params/direction = 180.0
params/spread = 180.0
params/linear_velocity = 180.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 650.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 19.64
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = -0.52
randomness/linear_velocity = 0.53
randomness/initial_angle = 60.0
script/script = ExtResource( 6 )

[node name="PowerupEffects" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 7 )

[node name="PowerupAnimations" type="AnimationPlayer" parent="PowerupEffects"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Bombermon = SubResource( 8 )
anims/BombermonAcquire = SubResource( 9 )
anims/Freeze = SubResource( 10 )
anims/Horns = SubResource( 11 )
anims/Medusa = SubResource( 12 )
anims/Net = SubResource( 13 )
anims/NetFinish = SubResource( 14 )
anims/Pepper = SubResource( 15 )
anims/Rockets = SubResource( 16 )
anims/RocketsReady = SubResource( 17 )
anims/Unfreeze = SubResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Freeze" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Freeze"]

visibility/visible = false
z/z = 1
texture = ExtResource( 9 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Freeze"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Area2D" type="Area2D" parent="PowerupEffects/Freeze"]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerupEffects/Freeze/Area2D"]

shape = SubResource( 19 )
trigger = true
_update_shape_index = 0

[node name="Rockets" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 10 )

[node name="LeftParticles" type="Particles2D" parent="PowerupEffects/Rockets"]

transform/pos = Vector2( -17, 26 )
config/amount = 200
config/lifetime = 0.1
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 3.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 1.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 20 )

[node name="RightParticles" type="Particles2D" parent="PowerupEffects/Rockets"]

transform/pos = Vector2( -4, 26 )
config/amount = 200
config/lifetime = 0.1
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 3.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 1.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 20 )

[node name="BackSprite" type="Sprite" parent="PowerupEffects/Rockets"]

visibility/visible = false
transform/pos = Vector2( -9, 6 )
texture = ExtResource( 11 )
hframes = 3

[node name="FrontSprite" type="Sprite" parent="PowerupEffects/Rockets"]

visibility/visible = false
transform/pos = Vector2( -12, 6 )
z/z = 1
texture = ExtResource( 12 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Rockets"]

process_mode = 1
wait_time = 140.0
one_shot = true
autostart = false

[node name="FlyingTimer" type="Timer" parent="PowerupEffects/Rockets"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Pepper" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Pepper"]

visibility/visible = false
transform/pos = Vector2( 0, -6.00011 )
transform/scale = Vector2( 1.4, 1.4 )
z/z = 1
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Pepper"]

process_mode = 1
wait_time = 7.0
one_shot = true
autostart = false

[node name="Ghost" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 15 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Ghost"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Medusa" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Medusa"]

visibility/visible = false
transform/pos = Vector2( 0, -6 )
texture = ExtResource( 17 )
hframes = 4

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Medusa"]

process_mode = 1
wait_time = 7.0
one_shot = true
autostart = false

[node name="Bombermon" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 18 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Bombermon"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="Area2D" type="Area2D" parent="PowerupEffects/Bombermon"]

input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerupEffects/Bombermon/Area2D"]

visibility/visible = false
shape = SubResource( 19 )
trigger = true
_update_shape_index = 0

[node name="Label" type="Label" parent="PowerupEffects/Bombermon"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 64.0
margin/right = 0.0
margin/bottom = 32.0
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
text = "5"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Horns" type="Node2D" parent="PowerupEffects"]

editor/display_folded = true
script/script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Horns"]

visibility/visible = false
texture = ExtResource( 20 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Horns"]

process_mode = 1
wait_time = 7.0
one_shot = true
autostart = false

[node name="Area2D" type="Area2D" parent="PowerupEffects/Horns"]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 21 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 21.5371, 10.0149 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 22 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -15.1712, 8.72701 )
shapes/1/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PowerupEffects/Horns/Area2D"]

transform/pos = Vector2( 21.5371, 10.0149 )
build_mode = 0
polygon = Vector2Array( 0.0907364, -3.34476, -7.2802, -7.41796, -7.2802, 0.738338 )
shape_range = Vector2( 0, 0 )
trigger = true

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="PowerupEffects/Horns/Area2D"]

transform/pos = Vector2( -15.1712, 8.72701 )
build_mode = 0
polygon = Vector2Array( 1.30538, 2.23587, 1.52002, -6.13012, -6.85091, -1.84228 )
shape_range = Vector2( 1, 1 )
trigger = true

[node name="Spikes" type="Node2D" parent="PowerupEffects"]

script/script = ExtResource( 21 )

[node name="Net" type="Node2D" parent="PowerupEffects"]

script/script = ExtResource( 22 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Net"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="GroundedTimer" type="Timer" parent="PowerupEffects/Net"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Sprite" type="Sprite" parent="PowerupEffects/Net"]

visibility/visible = false
transform/scale = Vector2( 2, 2 )
z/z = 1
texture = ExtResource( 23 )


